--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -268,6 +268,11 @@
     <Compile Include="Domains\Repository\ProteomeXchange\RootProject.cs" />
     <Compile Include="Domains\Repository\ProteomeXchange\TermNode.cs" />
     <Compile Include="Domains\Job\JobInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Storage\Config\ConversionConfig.cs" />
     <Compile Include="Domains\Job\RemoteConvertJob.cs" />
     <Compile Include="Domains\Sort\IntArrayNode.cs" />
@@ -370,6 +375,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="PSI-MS.obo" />
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Config\MLConfigFile.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -489,6 +498,7 @@
     <EmbeddedResource Include="Resources\Pay\Weixin.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+    <Content Include="Resources\Menu\Redis.png" />
     <Content Include="Version-CN.xml" />
     <Content Include="Version.xml" />
   </ItemGroup>
